--- a/sass/sheets/flexbox/lg.scss
+++ b/sass/sheets/flexbox/lg.scss
@@ -225,12 +225,12 @@
 
         // Justify & centre
 
-        // [data-util~="row:lg:jc"] {
-        //     display: flex;
-        //     flex-direction: row;
-        // 	align-items: center;
-        // 	justify-content: space-between;
-        // }
+        [data-util~="row:lg:jc"] {
+            display: flex;
+            flex-direction: row;
+        	align-items: center;
+        	justify-content: space-between;
+        }
 
         // Justify & bottom
 
